--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
         "test": "tsc && ava"
     },
     "pre-push": [
-        "lint",
-        "coverage"
+        "test"
     ],
     "dependencies": {
         "bluebird": "^3.5.0",
@@ -22,8 +21,12 @@
     },
     "devDependencies": {
         "@types/bluebird": "^3.5.11",
+        "@types/generic-pool": "^3.1.0",
+        "@types/glob": "^5.0.32",
         "@types/lodash": "^4.14.74",
         "@types/node": "^8.0.30",
+        "@types/plotly.js": "^1.28.5",
+        "@types/uuid": "^3.4.2",
         "ava": "^0.21.0",
         "nyc": "^11.1.0",
         "pre-push": "^0.1.1",
