--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "scripts": {
-        "test": "tsc && NODE_PATH=\"dist/src/\" ava"
+        "test": "tsc && NODE_PATH=\"dist/src/\" ava",
+        "versionBump": "ts-node scripts/versionBump.ts"
     },
     "pre-push": [
-        "test"
+        "test",
+        "versionBump"
     ],
     "dependencies": {
         "@types/bluebird": "^3.5.11",
@@ -50,7 +52,7 @@
         ]
     },
     "name": "tsplot",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "description": "A server-side plotting utility currently focused around phantomjs and plotly",
     "main": "dist/src/index",
     "typings": "src/index",
