clean up imports

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "@types/lodash": "^4.14.74",
         "@types/node": "^8.0.30",
         "@types/plotly.js": "^1.28.5",
+        "@types/socket.io": "^1.4.31",
         "@types/uuid": "^3.4.2",
         "bluebird": "^3.5.0",
         "d3": "^3.5.17",
-        "dimple-js": "^2.1.4",
         "generic-pool": "^3.1.7",
         "glob": "^7.1.2",
         "image-data-uri": "^1.0.0",
@@ -25,6 +25,7 @@
         "phantom": "^4.0.5",
         "phantom-pool": "^1.2.2",
         "plotly.js": "^1.29.3",
+        "socket.io": "^2.0.4",
         "uuid": "^3.1.0",
         "webworker-threads": "^0.7.13"
     },
