--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "phantom-pool": "^1.2.2",
         "plotly.js": "^1.29.3",
         "socket.io": "^2.0.4",
+        "utilities-ts": "git+https://github.com/andnp/utilities-ts",
         "uuid": "^3.1.0",
         "webworker-threads": "^0.7.13"
     },
