--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "scripts": {
         "build": "tsc",
         "test": "tsc && NODE_PATH=\"dist/src/\" ava",
-        "versionBump": "ts-node scripts/versionBump.ts"
+        "versionBump": "ts-node scripts/versionBump.ts",
+        "watch": "tsc --watch"
     },
     "pre-push": [
         "test",
